force-app/main/default/objects/nort_Config__mdt/nort_Config__mdt.object-meta.xml
<CustomObject>
    <label>Nort Config</label>
    <pluralLabel>Nort Configs</pluralLabel>
</CustomObject>