force-app/main/default/objects/nort_Config__mdt/fields/Agent_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_API_Name__c</fullName>
    <label>Agent API Name</label>
    <description>API name of the Agentforce agent invoked for diagnosis. Configurable so the loop can be pointed at a different agent without redeploying Apex.</description>
    <inlineHelpText>The API name of the diagnosis agent (from the agent detail page in Setup).</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>