force-app/main/default/objects/nort_Config__mdt/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <label>Batch Size</label>
    <description>Scope size for the dedup batch execute method. Tunable to manage governor headroom when grouping and upserting signatures.</description>
    <inlineHelpText>Records per batch execute (e.g. 200).</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>