force-app/main/default/objects/nort_Config__mdt/fields/Case_Queue_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>Case_Queue_DeveloperName__c</fullName>
    <label>Case Queue Developer Name</label>
    <description>Developer name of the internal queue that owns auto-created cases. Keeps automated cases off real agents' queues and out of SLA/CSAT metrics.</description>
    <inlineHelpText>Developer name of the queue that owns auto-created error cases.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>