force-app/main/default/objects/nort_Config__mdt/fields/Case_RecordType_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>Case_RecordType_DeveloperName__c</fullName>
    <label>Case Record Type Developer Name</label>
    <description>Developer name of the dedicated Case record type for auto-created error cases. Used to exclude these cases from entitlements, SLA, and CSAT.</description>
    <inlineHelpText>Developer name of the Case record type for auto-created error cases.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>