force-app/main/default/objects/nort_Config__mdt/fields/Diagnosis_Cooldown_Hours__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Cooldown_Hours__c</fullName>
    <label>Diagnosis Cooldown Hours</label>
    <description>Minimum hours between agent diagnoses of the same signature. Enforces "at most once per window" and suppresses re-diagnosis of recurrences (including recurrence after case close).</description>
    <inlineHelpText>Minimum hours before the same signature can be diagnosed again (e.g. 24).</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>