force-app/main/default/objects/nort_Config__mdt/fields/Max_Item_Chars__c.field-meta.xml
<CustomField>
    <fullName>Max_Item_Chars__c</fullName>
    <label>Max Item Chars</label>
    <description>Maximum characters retained per resolved analysis item before truncation. Bounds how much of any single class/flow/field lands in the analysis prompt. NortConfig falls back to 6000 when blank.</description>
    <inlineHelpText>Max characters kept per resolved analysis item (e.g. 6000).</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>