force-app/main/default/objects/nort_Config__mdt/fields/Max_Total_Chars__c.field-meta.xml
<CustomField>
    <fullName>Max_Total_Chars__c</fullName>
    <label>Max Total Chars</label>
    <description>Maximum characters for the whole assembled analysis grounding context across all items. Final bound on the grounding merge field handed to the analysis prompt template. NortConfig falls back to 24000 when blank.</description>
    <inlineHelpText>Max characters for the assembled analysis grounding context (e.g. 24000).</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>