force-app/main/default/objects/nort_Config__mdt/fields/Snippet_Length__c.field-meta.xml
<CustomField>
    <fullName>Snippet_Length__c</fullName>
    <label>Snippet Length</label>
    <description>Number of leading characters of the normalized message retained for the fingerprint key. Tunable to balance fingerprint specificity against fragmentation.</description>
    <inlineHelpText>Characters of the normalized message used for fingerprinting (e.g. 200).</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>