force-app/main/default/objects/nort_Config__mdt/fields/Tooling_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Tooling_Named_Credential__c</fullName>
    <label>Tooling Named Credential</label>
    <description>Developer name of the Named Credential the Tooling API client calls through (callout:&lt;name&gt;/services/data/...). Configurable so the same-org credential can be renamed without redeploying Apex. NortConfig falls back to 'Nort_Tooling' when blank.</description>
    <inlineHelpText>Named Credential developer name for same-org Tooling API callouts (e.g. Nort_Tooling).</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>