force-app/main/default/objects/nort_Config__mdt/fields/Volume_Cap__c.field-meta.xml
<CustomField>
    <fullName>Volume_Cap__c</fullName>
    <label>Volume Cap</label>
    <description>Optional ceiling on the number of new signatures diagnosed per window. Left blank = unlimited (the chosen dedup-only behavior). Populate in Setup to cap spend during a diverse-error storm without a code change.</description>
    <inlineHelpText>Max new signatures diagnosed per window. Leave blank for unlimited (dedup-only).</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>